# uv-template

./: .gitignore  LICENSE  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  taskfile.yml
.github/workflows/: ci.yml
scripts/: install-tools.sh
src/example/: example.py  parking_system.py
tests/: test_example.py  test_parking_system.py
