[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.14.11",
]

[dependency-groups]
dev = [
    "pyrefly>=0.47.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/example", "src/my_package"]
