[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.14.11",
]

[dependency-groups]
dev = [
    "pyrefly>=0.47.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.11",
    "skylos>=4.1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/example", "src/my_package"]


[tool.ruff]
line-length = 90
indent-width = 2

[tool.ruff.lint]
select = ["I", "F401", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
